--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "fft-js": "^0.0.12",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.532.0",
+    "ogl": "^1.0.11",
     "plotly.js-gl3d-dist": "^3.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
