--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "shadcn-ui": "^0.9.5",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "three": "^0.178.0",
