--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "fft-js": "^0.0.12",
+    "framer-motion": "^12.23.11",
     "gsap": "^3.13.0",
     "lucide-react": "^0.532.0",
     "ogl": "^1.0.11",
@@ -39,6 +40,7 @@
     "three": "^0.178.0",
     "three-forcegraph": "^1.43.0",
     "tone": "^15.1.22",
+    "uuid": "^11.1.0",
     "wavesurfer.js": "^7.10.1",
     "web-audio-beat-detector": "^8.2.30"
   },
@@ -46,6 +48,7 @@
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
