--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fft-js": "^0.0.12",
     "framer-motion": "^12.23.11",
     "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.532.0",
     "ogl": "^1.0.11",
     "plotly.js-gl3d-dist": "^3.0.3",
